# publiccode.yml

./: .buildinfo  .editorconfig  .gitignore  .python-version  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CNAME  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Gemfile  LICENCE.md  README.it.md  README.md  _config.yml  aliases-list.html  categories-list.de.rst  categories-list.html  conf.py  country.html  docker-compose.yml  document_settings.yml  example.html  forks.de.rst  forks.html  forks.md  genindex.html  index.de.rst  index.html  index.it.md  index.it.rst  new-publiccode.schema.json  objects.inv  pa-types.md  publiccode.json.schema  publiccode.schema.json  publiccode.yml  (+11 more)
.doctrees/: aliases-list.doctree  categories-list.doctree  country.doctree  environment.pickle  example.doctree  forks.doctree  index.doctree  schema.core.doctree  schema.it.doctree  scope-list.doctree
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_or_enhancement.md  config.yml
_sources/: aliases-list.rst.txt  categories-list.rst.txt  country.rst.txt  index.rst.txt  schema.core.rst.txt  schema.it.rst.txt
_templates/: layout.html
docs/: Makefile  build.sh  categories-list.rst  conf.py  country.rst  example.rst  index.rst  pa-types.md  scope-list.rst
editor/: .babelrc  .eslintrc  .gitignore  CNAME  README.md  package.json  todo.md  webpack.config.js
example/: publiccode.minimal.yml  publiccode.yml
governance/: charter.md  procedure-proposing-changes-and-voting.md
schematest.md/: publiccode.schema.json  publiccode.schema.md
script/: test.sh
version/: index.md
(+194 files in other folders)
