[project]
name = "publiccode-yml"
version = "0.5.0"
# This has no effect yet for uv python install, use .python-version for now
# https://github.com/astral-sh/uv/pull/13510
requires-python = "==3.14.0"
dependencies = [
    "sphinx==8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-press-theme==0.9.1",
]
